# budget-app

./: AGENDA_TARGET_STATE.md  AGENTS.md  README.md  pyproject.toml
examples/: sample_state.json  sample_transactions.csv
src/budget_gui_app/: __init__.py  app.py
src/budget_gui_app/core/: importers.py  ledger.py  models.py  periods.py  rules.py  sankey.py  state.py  summaries.py
src/budget_gui_app/examples/: sample_state.json  sample_transactions.csv
src/budget_gui_app/io/: state_json.py  transactions_csv.py
src/budget_gui_app/ui/: main.py  pages_data.py  pages_visualisation.py
tests/: test_budget_targets.py  test_cash_flow_semantics.py  test_examples.py  test_importers.py  test_ledger.py  test_periods_and_ux_helpers.py  test_rules.py  test_sankey.py  test_source_scoped_transfers.py  test_state.py  test_state_json.py  test_transfer_grouping.py  test_ui_flow_direction_helpers.py  test_upload_events.py
