[project]
name = "budget-gui-app"
version = "0.1.0"
description = "Local-only household budget app with CSV import, rules, review, and Sankey dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nicegui>=2.0",
  "pandas>=2.2",
  "plotly>=5.20",
]

[project.scripts]
budget-app = "budget_gui_app.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
